* No longer using environment variable CVS_ROOT. Validation now requires one to either set localworkingcopy or cvsroot and module (CC-207). Patch by Mark Doliner
* Fixed getting cvs version number to avoid the NPE, and automatically use the old format in that case (CC-105). Patch by Jerome Lacoste.

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

documentation:
----------------------
* Spelling corrections. Patch by Larry Shatzer.

EmailPublisher:
----------------------
* Now accepts <alert> elements to notify users of modifications in files matching a regexp (CC-120). Patch by Eric Spiegelberg

FTPPublisher:
----------------------
* Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified
* HTMLEmailPublisher fails to transform xml (CC-112)

JMX:
----------------------
* Add ability to require username/password for JMX interface (CC-128). Patch by Glenn Brown
* Upgraded to MX4J 3.0.1

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

MavenBuilder:
----------------------
* Require goal attribute. Fixes problem where builder would silently do nothing without one. Patch by Jerome Lacoste

MavenSnapshotDependency:
----------------------
* fix NPE when dependency lacks version tag. Patch by Josh W. Arnold
* MavenSnapshotDependency NPE when no deps listed (CC-248). Patch by Tim Shadel
* add default dependency type of jar (CC-252). Patch by Jerome Lacoste

MKS:
----------------------